finished basic styling

--- a/index.html
+++ b/index.html
@@ -4,12 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>War Footage</title>
 </head>
 <body>
-    <h1>
-        Below are archive.is links to see the war recordings.
-    </h1>
-    
+    <div class="container">
+        <h1> Radio Frequency Tuner </h1>
+
+    </div>
+
+    <!-- write paragraph on the purpose of displaying these recordings -->
+    <div id="linklist">
+        <a href="link.html">Dummy link text</a>
+        <a href="link.html">Dummy link text</a>
+        <a href="link.html">Dummy link text</a>
+        <a href="link.html">Dummy link text</a>
+        <a href="link.html">Dummy link text</a>
+        <a href="link.html">Dummy link text</a>
+    </div>
+    <footer class="footer">
+        <h3>
+            For anyone who can translate Russian, please contact: <a href="https://twitter.com/CashmanDian" class="contact"> Twitter@imfarout</a>
+        </h3>
+    </footer>
 </body>
 </html>
