--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 <body>
     <div class="container">
         <h1> Radio Frequency Tuner </h1>
-
+        <a href="http://websdr.ewi.utwente.nl:8901/" class="tuner">Access radio Frequency tuner here</a>
     </div>
 
+    <h2>THESE RECORDINGS HAVEN'T BEEN TRANSLATED YET</h2>
     <!-- write paragraph on the purpose of displaying these recordings -->
     <div id="linklist">
-        <a href="link.html">Dummy link text</a>
-        <a href="link.html">Dummy link text</a>
-        <a href="link.html">Dummy link text</a>
-        <a href="link.html">Dummy link text</a>
+        <a href="https://archive.org/details/websdr_recording_start_2022-02-27T04_42_32Z_5125.0kHz">Feb 26th 11:47 est</a>
+        <a href="https://archive.org/details/websdr_recording_start_2022-02-27T05_00_35Z_5308.6kHz">Feb 27th 12:00 est</a>
+        <a href="https://archive.org/details/websdr_recording_start_2022-02-27T05_00_35Z_5308.6kHz">Feb 27th 12:05 est</a>
+        <a href="https://archive.org/details/websdr_recording_start_2022-02-27T05_05_42Z_5125.0kHz">Feb 27th 12:11 est</a>
         <a href="link.html">Dummy link text</a>
         <a href="link.html">Dummy link text</a>
     </div>
