--- a/index.html
+++ b/index.html
@@ -12,16 +12,40 @@
         <h1> Radio Frequency Tuner </h1>
         <a href="http://websdr.ewi.utwente.nl:8901/" class="tuner">Access radio Frequency tuner here</a>
     </div>
+    <p>This website hosts archive.is links to audio recordings of Russian military communications recorded on frequency 1525. As of now, these recording have not been translated.
+        The recordings are available for free on archive.is. 
+        The radio tuner is maintained by the <a href="https://www.ewi.utwente.nl/en/">Electronic Warfare Institute</a> of the University of Twente.
+    </p>
+    <h3>Known Russian Military Frequencies</h3>
+    <!-- List all Radio Frequencies here in a nice format -->
+        <ul class="russian-list">
+            <li>4600 KHZ POT RUS</li>
+            <li>4179 KHZ</li>
+            <li>2737 KHZ</li>
+            <li>4625 KHZ BUZZER</li>
+            <li>6822 KHZ </li>
+            <li>3218.5 KHZ Katok-65</li>
+            <li>5827 KHZ 8131 KHZ LRA</li>
+            <li>11318 KHZ LRA TU-95 STAT </li>
+            <li>3828 KHZ</li>
+            <li>3850.00 KHZ</li>
+            <li>7835.00 KHZ</li>
+            <li>7816.00 KHZ</li>
+            <li>5125 KHZ</li>
+
+</ul>
+
+
 
     <h2>THESE RECORDINGS HAVEN'T BEEN TRANSLATED YET</h2>
     <!-- write paragraph on the purpose of displaying these recordings -->
     <div id="linklist">
+        <label>CODENAME: </label>
         <a href="https://archive.org/details/websdr_recording_start_2022-02-27T04_42_32Z_5125.0kHz">Feb 26th 11:47 est</a>
         <a href="https://archive.org/details/websdr_recording_start_2022-02-27T05_00_35Z_5308.6kHz">Feb 27th 12:00 est</a>
         <a href="https://archive.org/details/websdr_recording_start_2022-02-27T05_00_35Z_5308.6kHz">Feb 27th 12:05 est</a>
         <a href="https://archive.org/details/websdr_recording_start_2022-02-27T05_05_42Z_5125.0kHz">Feb 27th 12:11 est</a>
-        <a href="link.html">Dummy link text</a>
-        <a href="link.html">Dummy link text</a>
+        
     </div>
     <footer class="footer">
         <h3>
