--- a/index.html
+++ b/index.html
@@ -40,13 +40,14 @@
     <h2>THESE RECORDINGS HAVEN'T BEEN TRANSLATED YET</h2>
     <!-- write paragraph on the purpose of displaying these recordings -->
     <div id="linklist">
-        <label>CODENAME: </label>
+        <label>CODENAME: BERAN </label>
         <a href="https://archive.org/details/websdr_recording_start_2022-02-27T04_42_32Z_5125.0kHz">Feb 26th 11:47 est</a>
         <a href="https://archive.org/details/websdr_recording_start_2022-02-27T05_00_35Z_5308.6kHz">Feb 27th 12:00 est</a>
         <a href="https://archive.org/details/websdr_recording_start_2022-02-27T05_00_35Z_5308.6kHz">Feb 27th 12:05 est</a>
         <a href="https://archive.org/details/websdr_recording_start_2022-02-27T05_05_42Z_5125.0kHz">Feb 27th 12:11 est</a>
-        
+        <a href="https://archive.org/details/air-force-possible-strikes">Feb 26th from 3:30 - 6:30 PM EST</a>
     </div>
+
     <footer class="footer">
         <h3>
             For anyone who can translate Russian, please contact: <a href="https://twitter.com/CashmanDian" class="contact"> Twitter@imfarout</a>
