adding styling and tips

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
         <h3>
             For anyone who can translate Russian, please contact: <a href="https://twitter.com/CashmanDian" class="contact"> Twitter@imfarout</a>
         </h3>
+    
+        <p class="tips">Tips:<br>
+            ETH: 0x15A027868f65a2391fab228C900BDc2291Eb6b2c
+        </p>
+        
     </footer>
 </body>
 </html>
