adding beren info

--- a/index.html
+++ b/index.html
@@ -52,8 +52,14 @@
 
     <h2>THESE RECORDINGS HAVEN'T BEEN TRANSLATED YET</h2>
     <!-- write paragraph on the purpose of displaying these recordings -->
+    <div className="beren">
+        <p>These recording detail a Russian offensive on Sun Feb 27th. An individual, 
+            codenamed Beran, is heard frequently on the comms. 
+            It is thought his unit sustained heavy casualties during their offensive.</p>
+    </div>
     <div id="linklist">
         <label>CODENAME: BERAN </label>
+       
         <a href="https://archive.org/details/websdr_recording_start_2022-02-27T04_42_32Z_5125.0kHz">Feb 26th 11:47 est</a>
         <a href="https://archive.org/details/websdr_recording_start_2022-02-27T05_00_35Z_5308.6kHz">Feb 27th 12:00 est</a>
         <a href="https://archive.org/details/websdr_recording_start_2022-02-27T05_00_35Z_5308.6kHz">Feb 27th 12:05 est</a>
