removing sus links

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <a href="https://archive.org/details/websdr_recording_start_2022-02-27T05_00_35Z_5308.6kHz">Feb 27th 12:00 est</a>
         <a href="https://archive.org/details/websdr_recording_start_2022-02-27T05_00_35Z_5308.6kHz">Feb 27th 12:05 est</a>
         <a href="https://archive.org/details/websdr_recording_start_2022-02-27T05_05_42Z_5125.0kHz">Feb 27th 12:11 est</a>
-        <a href="https://archive.org/details/air-force-possible-strikes">Feb 26th from 3:30 - 6:30 PM EST</a>
+        <!-- <a href="https://archive.org/details/air-force-possible-strikes">Feb 26th from 3:30 - 6:30 PM EST</a> -->
     </div>
 
     <footer class="footer">
