--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
         <br>
         <h3 class ="submission">Submit Your Recording Here</h3>
         <a href="https://forms.gle/muUSwLGr8S5qBR9m9" class="tuner">Submit Recording</a>
+        <br>
     </div>
     <div className = "body-tag">
     <p>This website hosts archive.is links to audio recordings of Russian military communications recorded on frequency 1525. As of now, these recording have not been translated.
         The recordings are available for free on archive.is. 
         The radio tuner is maintained by the <a href="https://www.ewi.utwente.nl/en/">Electronic Warfare Institute</a> of the University of Twente.
     </p>
-    
+    </div>
     <h3>Known Russian Military Frequencies</h3>
     <!-- List all Radio Frequencies here in a nice format -->
         <ul class="russian-list">
