adding radio freq

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <li>7835.00 KHZ</li>
             <li>7816.00 KHZ</li>
             <li>5125 KHZ</li>
-            <li></li>
+            <li>7933 KHZ</li>
 
 </ul>
 </div>
