--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <div id="linklist">
       
         <b><label>Russian Radio Communications on Attack of Ukrainian Helicopter. Please be aware of the multiple audio files uploaded into some archives. </label></b>
+        <b><a href="https://archive.org/details/websdr_recording_start_2022-02-27T18_45_33Z_7933.0kHz">Feb 27th, 1:38 PM est PART 3</a></b> 
         <b><a href="https://archive.org/details/websdr_recording_start_2022-02-27T18_29_19Z_7933.1kHz">Feb 27th, 1:27 PM est PART 2</a></b> 
        <b><a href="https://archive.org/details/websdr_recording_start_2022-02-27T18_04_39Z_7933.0kHz">Feb 27th, 12:59 PM est PART 1</a></b> 
     
