--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Russian Military Radio Communications</title>
 </head>
 <body>
+    <iframe src="http://websdr.ewi.utwente.nl:8901/" style="width: 90%; height: 50vh;"></iframe>
     <div class="container">
         <h1> Radio Frequency Tuners </h1>
         <a href="http://websdr.ewi.utwente.nl:8901/" class="tuner">University of Twente Radio Listener</a>
