--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>Russian Military Radio Communications</title>
 </head>
 <body>
-    <iframe src="http://websdr.ewi.utwente.nl:8901/" style="width: 90%; height: 50vh;"></iframe>
+    <iframe src="https://websdr.ewi.utwente.nl:8901/" style="width: 100%; height: 50vh;"></iframe>
     <div class="container">
         <h1> Radio Frequency Tuners </h1>
-        <a href="http://websdr.ewi.utwente.nl:8901/" class="tuner">University of Twente Radio Listener</a>
+        <a href="https://www.google.com/search?q=%http://websdr.ewi.utwente.nl:8901" class="tuner">University of Twente Radio Listener</a>
         <br>
         <br>
         <a href="http://84.201.157.25:26057" class="tuner">Alternate Radio Listener (UKR)</a>
