--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Russian Military Radio Communications</title>
 </head>
 <body>
-    <iframe src="https://www.google.com/search?q=%http://websdr.ewi.utwente.nl:8901/" style="width: 100%; height: 50vh;"></iframe>
+    <iframe src="https://bit.ly/3K1NkD4" style="width: 100%; height: 50vh;"></iframe>
     <div class="container">
         <h1> Radio Frequency Tuners </h1>
         <a href="http://websdr.ewi.utwente.nl:8901" class="tuner">University of Twente Radio Listener</a>
