--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <title>Russian Military Radio Communications</title>
 </head>
 <body>
+    <iframe src="https://bit.ly/3K1NkD4" style="width: 100%; height: 50vh;"></iframe>
     <div class="container">
         <h1> Radio Frequency Tuners </h1>
-        <a href="http://websdr.ewi.utwente.nl:8901/" class="tuner">University of Twente Radio Listener</a>
+        <a href="http://websdr.ewi.utwente.nl:8901" class="tuner">University of Twente Radio Listener</a>
         <br>
         <br>
         <a href="http://84.201.157.25:26057" class="tuner">Alternate Radio Listener (UKR)</a>
@@ -60,7 +61,7 @@
     <div id="linklist">
       
         <b><label>Russian Radio Communications on Attack of Ukrainian Helicopter. Please be aware of the multiple audio files uploaded into some archives. </label>
-            <b><a href="https://archive.org/details/websdr_recording_start_2022-02-27T19_17_47Z_7933.0kHz">Feb 27th, 2:14 - 2:47 est PART 5</a> </b>
+            <b><a href="https://archive.org/details/websdr_recording_start_2022-02-27T19_17_47Z_7933.0kHz">Feb 27th, 2:17 - 2:45 PM est PART 5</a></b> 
             <b><a href="https://archive.org/details/websdr_recording_start_2022-02-27T19_07_27Z_7933.0kHz">Feb 27th, 1:50 PM est PART 4</a></b> 
         
         <b><a href="https://archive.org/details/websdr_recording_start_2022-02-27T18_45_33Z_7933.0kHz">Feb 27th, 1:38 PM est PART 3</a></b> 
