--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
     <div id="linklist">
       
         <b><label>Russian Radio Communications during Ukraine War Attack on Kiev (suspected). Communications included them ordering fire on a Ukrainian village, and calling in artillery strikes. </label>
-   
+
+            <b><a href="https://archive.org/details/where-tf-is-the-battery">Beren in Heavy Combat Feb 27th 5:25 PM - 5:40 PM EST PART 9</a></b> 
             <b><a href="https://archive.org/details/where-tf-is-the-battery">Russians Cant Find Artillery Battery Feb 27th 5:00 PM - 5:30 PM EST PART 8</a></b> 
             <b><a href="https://archive.org/details/websdr_recording_start_2022-02-27T20_52_45Z_7933.0kHz">Russian Artillery Coordinates Feb 27th 3:50 PM - 4:33 PM EST PART 7</a></b> 
             <b><a href="https://archive.org/details/buran-opens-fire-on-residents-of-unknown-place-and-signal-jamming-with-ukraine-anthem">Russian Military Firing on Village Feb 27th 3:20 - 3:44 PM EST PART 6</a></b> 
